cap-07/arquivos/kubernetes/primeiro-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aplicacao-a
  labels:
    app: nginx
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: nginx
