cap-07/arquivos/kubernetes/primeiro-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: "meuservico.ufscar.br"
      http:
        paths:
          - path: /app-a
            pathType: Prefix
            backend:
              service:
                name: aplicacao-a
                port:
                  number: 80
